add portfolio link in the cv

--- a/assets/resume.html
+++ b/assets/resume.html
@@ -286,6 +286,10 @@
           <span>✉️</span>
           <span>bouzeed.egnaidi@gmail.com</span>
         </div>
+        <div class="contact-item">
+          <span>💼</span>
+          <span>hunter0012.github.io/portfolio</span>
+        </div>
       </div>
     </header>
 
